Only build if map has changed.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,10 @@
 name: CTF-Outside
 
-on: [push, workflow_dispatch]
+on:
+  push:
+    paths:
+      - outside.map
+  workflow_dispatch:
 
 jobs:
   build:
